fix z-index

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ body {
     width: 80%;
 }
 
+.swal-overlay {
+    z-index: 1000;
+}
+
 #title {
     width: fit-content;
     display: block;
